--- a/Linal_wk1/Linal_wk1.csproj
+++ b/Linal_wk1/Linal_wk1.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Controller\ObjectController.cs" />
+    <Compile Include="Model\Kubus.cs" />
     <Compile Include="Model\Matrix3D.cs" />
     <Compile Include="Other\ArrowEnds.cs" />
     <Compile Include="Other\ArrowLine.cs" />
